--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <title>Canvas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="src/styles/style.css" rel="stylesheet">
+        <link href="src/style.css" rel="stylesheet">
     </head>
     <body>
         <canvas id="canvas" width="1350" height="600"></canvas>
 
-        <script type="module" src="src/scripts/script.js"></script>
+        <script type="module" src="src/script.js"></script>
     </body>
 </html>
